2006-05-30  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (interface_configured): fix a typo with plip
	interfaces.
	(bootproto_to_code): new function, gets a numeric code according to
	the bootproto.
	(get): use this function
	(set): set bootproto accordingly

2006-05-29  Carlos Garnacho  <carlosg@gnome.org>

	* files/general_isdn_ppp_options: do not load plugin userpass. Fixes
	GNOME bug #319553
	* Init/ServicesList.pm: add a missing comma

2006-05-29  Joe Marcus Clarke  <marcus@freebsd.org>

	* Network/Ifaces.pm: fix wireless support, improve interface type
	detection.
	* Init/Services.pm, Init/ServicesList.pm, Network/Hosts.pm,
	Network/Ifaces.pm, Shares/SMB.pm, Time/NTP.pm, Time/TimeDate.pm,
	Users/Users.pm, Utils/Platform.pm: add support for FreeBSD 7

2006-05-26  Carlos Garnacho  <carlosg@gnome.org>

	* system-tools-backends.conf.in: make dbus access file open for
	testing purposes, and do not use stuff that potentially crashes the
	DBus daemon

2006-05-26  Carlos Garnacho  <carlosg@gnome.org>

	* UsersConfig.pm: added default group. -1 will mean "create new group
	for the user"
	* Users/Groups.pm: use addgroup/delgroup if available
	* Users/Users.pm: use adduser/deluser if available, translate default
	group to GIDs. Do not use a global variable getting the configuration,
	some values may survive several get() calls

2006-05-20  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: fix problem expanding paths, detect Net::DBus, and
	also allow to specify a non-standard perl library dir for it with
	--with-net-dbus
	* SystemToolsBackends.pl.in: include scriptsdir and netdbusdir in @INC

2006-05-19  Carlos Garnacho  <carlosg@gnome.org>

	* system-tools-backends.conf.in: added, prototype file for DBus
	system.d dir.
	* .cvignore: updated.
	* Makefile.am: install, clean and package
	system-tools-backends.conf.in.
	* configure.in: small improvements, add --with-dbus-sys=<dir> and
	--with-stb-group=<group>
